i have tried everything i can think of and have spent 5 hours on google trying to figure this out-i have everything set up to hide the nyt api key in my .env file, but everytime i try to query the api, the key (keys.nyt.key) shows up as undefined. i know that the keys.js file is being loaded in correctly, but i'm not able to access the actual key from the .env. will keep working on it, but am having to deploy without a functional api

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mongoose": "^5.2.9",
+    "mime-db": "^1.36.0",
+    "mongoose": "^5.2.10",
     "react-router-dom": "^4.3.1",
     "routes": "^2.1.0"
   }
