--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "routes": "^2.1.0"
   },
   "scripts": {
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "install": "cd client && yarn install",
+    "client": "cd client && npm run start",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   }
