--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "engines": {
-    "node": "9.9.0"
+    "node": "9.9.0",
+    "npm": "5.6.0"
   },
   "repository": "git@github.com:jamiereaves/fauxYorkTimesRedux.git",
   "author": "jamie reaves <jamiereaves@utexas.edu>",
@@ -19,9 +20,6 @@
     "routes": "^2.1.0"
   },
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "client": "cd client && npm run start",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   }
