--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "routes": "^2.1.0"
   },
   "scripts": {
-    "build": "cd client && npm run build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
   }
 }
