--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "if-env": "^1.0.4",
     "mime-db": "^1.36.0",
     "mongoose": "^5.2.10",
     "react-router-dom": "^4.3.1",
